ui integrated and works fairly well, Satisfactory

--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+   
+    <!-- <button class="start" onclick="game()">start</button> -->
+    <div class="btn-container">
+        <!-- <button class="play" >play</button> -->
+        <button class="rock" >rock</button>
+        <button class="paper" >paper</button>
+        <button class="scissors">scissors</button>
+    </div>
+    <div class="score">
+        <p class="score_update"></p>
+    </div>
 
-
+    <div class="outcome_div">
+        <p class="outcome"></p>
+        <h3 class="win_or_lose"></h3>
+    </div>
 
 
 
